# plasma-containmentactions-customdesktopmenu

./: README.txt  makerelease
src/: CMakeLists.txt  HOWTO  customdesktopmenu.cpp  customdesktopmenu.h  install  plasma-containmentactions-customdesktopmenu.desktop
